tests/test2/fail/fail-print.m2
int main(){
	return 0;
}

void printInt(){
	
}